@@ -38,6 +38,14 @@
 <p>2019-11-10  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>wand/magick_wand.c (MagickClearException): Destroy any existing
+exception info before re-initializing the exception info or else
+there will be a memory leak.</li>
+<li>TclMagick/generic/libttkcommon.c (myMagickError): Clear
+exception from the Wand after it has been reported.  Addresses the
+fourth problem noted by SourceForge issue #420 &quot;TclMagick issues
+and patch&quot;.  However, MagickClearException() already clears an
+exception in the Wand, so a new function is not needed.</li>
 <li>TclMagick/unix/m4/tcl.m4: Change hard-coded INSTALL path to
 point to config/install-sh.  Re-generated/updated Autotools stuff
 by executing the genconf.sh script.  Addresses the first problem
